--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@nivo/core": "^0.69.0",
     "@nivo/line": "^0.69.1",
     "@nivo/pie": "^0.69.0",
+    "@reach/combobox": "^0.15.1",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "google-map-react": "^2.1.9",
     "install": "^0.13.0",
     "npm": "^7.13.0",
     "react": "^17.0.2",
